# LMECA1120-Devoirs

./: .gitignore  README.md
Approximation/data/: one.txt  triangles_166_bis.txt  triangles_22_bis.txt  triangles_46_bis.txt  triangles_6315_bis.txt  two.txt
Approximation/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
BandSolver/data/: quads_160.txt  quads_19.txt  quads_313.txt  quads_40.txt  quads_79.txt  rect_quad_1601.txt  rect_quad_20.txt  rect_quad_325.txt  rect_quad_42.txt  rect_tri_1590.txt  rect_tri_22.txt  rect_tri_324.txt  rect_tri_36.txt  triangles_166.txt  triangles_166_xopt.txt  triangles_166_yopt.txt  triangles_22.txt  triangles_46.txt  triangles_6315.txt
BandSolver/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
Edges/data/: conge.txt  gear16.txt  gear60.txt  gear8.txt
Edges/src/: fem.c  fem.h  homework.c  main.c
Grains/src/: fem.c  fem.h  glfem.c  homework.c  main.c
Integrate/: CMakeLists.txt
Integrate/src/: fem.c  fem.h  glfem.c  homework.c  main.c
Poisson/data/: example.txt  quads_160.txt  quads_19.txt  quads_313.txt  quads_40.txt  quads_79.txt  tiny.txt
Poisson/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
Project/data/: meca1120-projet-meshMedium.txt
Project/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
Projet/: project.c
Projet/data/: meca1120-projet-meshBig.txt
glfw-3.2.1/: CMakeLists.txt
myFem-Edges/data/: gear12.txt  naca.txt  stupid.txt
myFem-Edges/src/: glfem.c  glfem.h  homework.c  main.c
projet/src/: fem.h  glfem.h  (+2 more)
src/: fem.c  fem.h  glfem.h  homework.c  main.c
